--- a/src/app/course-card/course-card.component.html
+++ b/src/app/course-card/course-card.component.html
@@ -3,11 +3,11 @@
     <div class="course-title">
         {{course.description}}
     </div>
-    <img width="300" alt="Angular Logo"
+    <img mx-width="90%" width="300" alt="Angular Logo"
          [src]="course.iconUrl">
 
     <div class="course-description">
         {{course.longDescription}}
     </div>
-
+    <button (click)="onCourseViewed()">View Course</button>
 </div>
