--- a/src/app/course-card/course-card.component.html
+++ b/src/app/course-card/course-card.component.html
@@ -1,7 +1,7 @@
 <div class="course-card">
 
     <div class="course-title">
-        {{course.description}}
+        {{ cardIndex + ". " + course.description}}
     </div>
     <img mx-width="90%" width="300" alt="Angular Logo"
          [src]="course.iconUrl">
