--- a/src/app/course-card/course-card.component.html
+++ b/src/app/course-card/course-card.component.html
@@ -1,10 +1,16 @@
-<div class="course-card">
+<div class="course-card" *ngIf="course">
 
     <div class="course-title">
         {{ cardIndex + ". " + course.description}}
     </div>
-    <img mx-width="90%" width="300" alt="Angular Logo"
-         [src]="course.iconUrl">
+    <img mx-width="90%" width="300" alt="Angular Logo" *ngIf="isImageVisible(); else noImage" [src]="course.iconUrl">
+
+    <ng-template #noImage>
+      <p>
+        No Image Available
+      </p>
+    </ng-template>
+
 
     <div class="course-description">
         {{course.longDescription}}
