--- a/src/app/course-card/course-card.component.html
+++ b/src/app/course-card/course-card.component.html
@@ -2,7 +2,7 @@
     [ngClass]="cardClasses()">
 
 
-    <div class="course-title">
+    <div class="course-title" [ngStyle]="cardStyle()">
         {{ cardIndex + ". " + course.description}}
     </div>
     <img mx-width="90%" width="300" alt="Angular Logo" *ngIf="isImageVisible(); else noImage" [src]="course.iconUrl">
